--- a/index.html
+++ b/index.html
@@ -596,13 +596,8 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="hero-content">
-                <h1>Skibidi Bundler</h1>
-                <p>Bundle of all the games you love and know. If you're unsure of what the play, select HTML games for a easier experience.</p>
+                <h1>Sigma Bundler</h1>
                 <div class="cta-buttons">
-                    <a href="./games.html?filter=html" class="cta-btn primary">
-                        <i class="fas fa-gamepad"></i>
-                        View HTML Games
-                    </a>
                     <a href="./games.html?filter=ALL" class="cta-btn secondary">
                         <i class="fas fa-bolt"></i>
                         Browse All Games
