--- a/games.html
+++ b/games.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sigma Bundler - Games</title>
+  <title>Sigma Bundler</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
