--- a/games.html
+++ b/games.html
@@ -15,7 +15,7 @@
       </ul>
   </nav>
   <input type="text" class="search-bar" id="searchInput" placeholder="Search games..." autocomplete="off">
-  <div id="badgeFilter">
+  <div id="badgeFilter" style="display: none !important">
     <span class="badge disabled" id="badgeFilterAll">All</span>
   </div>
 </header>
